--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -26,6 +26,7 @@
 @import "media-feed.less";
 @import "footer.less";
 
+@import "2-0.less";
 @import "utilities.less";
 @import "responsive-utilities.less";
 @import "media-queries.less";
