--- a/post-sidebar.hbs
+++ b/post-sidebar.hbs
@@ -14,7 +14,7 @@
 
 <div id="content" class="container">
  	<div class="row">
- 		<div class="col-md-8 col-md-offset-2">
+ 		<div class="col-md-8">
  			<div id="primary" class="content-area">
  				<main id="main" class="site-main">
  					{{#post}}
@@ -62,6 +62,10 @@
 					{{/post}}
  				</main>
  			</div>
+ 		</div>
+
+ 		<div class="col-md-4">
+ 			{{> sidebar}}
  		</div>
  	</div>
 </div>
