--- a/post.hbs
+++ b/post.hbs
@@ -18,7 +18,7 @@
  			<div id="primary" class="content-area">
  				<main id="main" class="site-main">
  					{{#post}}
-					<article class="post">
+					<article class="post no-sidebar">
 						<div class="entry-meta clearfix">
 							<img class="author-image" src="{{img_url primary_author.profile_image}}" alt="{{primary_author.name}}">
 							<div class="right">
