--- a/assets/less/2-0.less
+++ b/assets/less/2-0.less
@@ -1,5 +1,5 @@
 @media (min-width: 1200px) {
-  .kg-width-wide {
+  .no-sidebar .kg-width-wide {
     margin-left: calc(~"-1000px / 2 + 100% / 2") !important;
     margin-right: calc(~"-1000px / 2 + 100% / 2") !important;
     img {
@@ -8,7 +8,7 @@
   }
 }
 
-.kg-width-full {
+.no-sidebar .kg-width-full {
   margin-left: calc(~"-100vw / 2 + 100% / 2") !important;
   margin-right: calc(~"-100vw / 2 + 100% / 2") !important;
   img {
