--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -2160,6 +2160,36 @@ button[type="submit"]:hover {
 .no-sidebar .kg-width-full img {
   width: 100vw;
 }
+.kg-image-card,
+.kg-gallery-card {
+  margin: 30px 0;
+}
+.kg-image-card figcaption,
+.kg-gallery-card figcaption {
+  font-size: 13px;
+  margin-top: 10px;
+}
+.kg-gallery-container {
+  display: flex;
+  flex-direction: column;
+}
+.kg-gallery-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.kg-gallery-image img {
+  display: block;
+  margin: 0 !important;
+  width: 100%;
+  height: 100%;
+}
+.kg-gallery-row:not(:first-of-type) {
+  margin: 0.75em 0 0 0;
+}
+.kg-gallery-image:not(:first-of-type) {
+  margin: 0 0 0 0.75em;
+}
 .clearfix:before,
 .clearfix:after,
 .container:before,
