--- a/post.hbs
+++ b/post.hbs
@@ -141,19 +141,19 @@
 																<div class="level-left">
 																	<div class="">
 																		<p class="bank_transfer__label is-size-6 has-text-grey">Người nhận</p>
-																		<p class="bank_transfer__value is-size-5">Vũ Minh Tâm</p>
+																		<p class="bank_transfer__value is-size-5">Phạm Hà My</p>
 																	</div>
 																</div>
 																<div class="level-right"><!--
 																	<a class="icon is-medium has-text-grey-light tt-copy-btn" title="copy"  onclick="return copyText(event)"><i class="fas fa-copy tt-clickable"></i></a> -->
-																	<img src="https://momo.com/myqr" class="image" />
+																	{{!-- <img src="https://i.ibb.co/C7T5thb/qr-code.jpg" class="image" /> --}}
 																</div>
 															</div>
 															<div class="level">
 																<div class="level-left">
 																	<div class="">
 																		<p class="bank_transfer__label is-size-6 has-text-grey">Số điện thoại</p>
-																		<p class="bank_transfer__value is-size-5">0915865558</p>
+																		<p class="bank_transfer__value is-size-5">0394919200</p>
 																	</div>
 																</div>
 																<div class="level-right">
@@ -179,12 +179,20 @@
 																	<div class="">
 																		<p class="bank_transfer__label is-size-6 has-text-grey">Nội dung chuyển khoản <i class="fas fa-exclamation-circle has-text-primary"></i></p>
 																		<p class="bank_transfer__value is-size-5 has-text-weight-bold">
-																			Mua {{id}} qua MOMO
+																			Mua {{id}} [email]
 																		</p>
 																	</div>
 																</div>
 																<div class="level-right">
 																	<a class="icon is-medium has-text-grey-light tt-copy-btn" title="copy"  onclick="return copyText(event)"><i class="fas fa-copy tt-clickable"></i></a>
+																</div>
+															</div>
+														</div>
+														<div class="column">
+															<div class="level">
+																<div class="level-right image"><!--
+																	<a class="icon is-medium has-text-grey-light tt-copy-btn" title="copy"  onclick="return copyText(event)"><i class="fas fa-copy tt-clickable"></i></a> -->
+																	<img src="https://i.ibb.co/C7T5thb/qr-code.jpg" />
 																</div>
 															</div>
 														</div>
