--- a/partials/widgets/widget-tags.hbs
+++ b/partials/widgets/widget-tags.hbs
@@ -1,11 +1,11 @@
 <aside class="widget widget-tags">
 	<h4 class="widget-title">Popular Tags</h4>
 	<span class="cat-links">
-		{{! Here are some examples below. You can add any tag you want. }}
-		<a href="/tag/tag-one">Tag One</a>
-		<a href="/tag/tag-two">Tag Two</a>
-		<a href="/tag/tag-three">Tag Three</a>
-		<a href="/tag/tag-four">Tag Four</a>
-		<a href="/tag/tag-five">Tag Five</a>
+		{{!-- is this a bug here that limit N will only fetch (N-1) tags? --}}
+		{{#get "tags" include="count.posts" order="count.posts desc" limit="6"}}
+			{{#foreach tags}}
+				<a href="{{url}}">{{name}} | {{count.posts}} posts</a>
+    		{{/foreach}}
+		{{/get}}
 	</span>
 </aside>
