Remove top author when not in index page

--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -1,6 +1,8 @@
 <div id="secondary" class="widget-area" role="complementary">
 	{{!-- {{> widgets/widget-facebook}} --}}
-	{{> widgets/widget-top-authors}}
+	{{#is "index"}}
+		{{> widgets/widget-top-authors}}
+	{{/is}}
 	{{> widgets/widget-tags}}
 	{{> widgets/widget-links}}
 	{{> widgets/widget-newsletter}}
