Add popular symbols - Mã hay - widget

--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -3,6 +3,7 @@
 	{{#is "index"}}
 		{{> widgets/widget-top-authors}}
 	{{/is}}
+	{{> widgets/widget-symbols}}
 	{{> widgets/widget-tags}}
 	{{> widgets/widget-links}}
 	{{> widgets/widget-newsletter}}
