Remove unused widget - Vietnamesize widget

--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -5,6 +5,6 @@
 	{{/is}}
 	{{> widgets/widget-symbols}}
 	{{> widgets/widget-tags}}
-	{{> widgets/widget-links}}
-	{{> widgets/widget-newsletter}}
+	{{!-- {{> widgets/widget-links}}
+	{{> widgets/widget-newsletter}} --}}
 </div>
