--- a/partials/widgets/widget-tags.hbs
+++ b/partials/widgets/widget-tags.hbs
@@ -1,5 +1,5 @@
 <aside class="widget widget-tags">
-	<h4 class="widget-title">Popular Tags</h4>
+	<h4 class="widget-title">Tag hay</h4>
 	<span class="cat-links">
 		{{!-- is this a bug here that limit N will only fetch (N-1) tags? --}}
 		{{#get "tags" include="count.posts" order="count.posts desc" limit="6"}}
