--- a/partials/widgets/widget-top-authors.hbs
+++ b/partials/widgets/widget-top-authors.hbs
@@ -1,7 +1,7 @@
 {{! You can only change widget title here. Don't change anything else. }}
 {{! Setup top stories in config.hbs and read "Widget: Top Stories" section on the documentation for more info. }}
 <aside class="widget widget-posts-list widget-top-stories">
-	<h4 class="widget-title">Top authors</h4>
+	<h4 class="widget-title">Tác giả hay</h4>
 	<span class="cat-links">
         {{!-- hacky leverage the same css with author in post --}}
 		<ul class="post">
