--- a/default.hbs
+++ b/default.hbs
@@ -16,6 +16,10 @@
 	<link rel="stylesheet" href="{{asset "css/screen.css"}}">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather:400,700%7CUbuntu:400,700">
 	<style>
+		{{!-- hacky way to disable bulmin list-style --}}
+		ul {
+			list-style: disc;
+		}
 		.hidden {
 			display: none !important;
 			visibility: hidden !important;
