UI minor adjustment meeting 2019-10-25 - Rearrange menu - Remove social links

--- a/default.hbs
+++ b/default.hbs
@@ -46,6 +46,15 @@
 				top: -11px;
 			}
 		}
+
+		#main-navigation {
+			float: left !important;
+		}
+
+		#authentication {
+			margin-right: 100px;
+			float: right;
+		}
 	</style>
 
 	<script>
