--- a/partials/config.hbs
+++ b/partials/config.hbs
@@ -2,7 +2,7 @@ var mondoOptions = {
 	'retina_logo': '',
 	'disqus_shortname': '',
 	'facebook_page': '',
-	'copyright_text': 'Lark | Powered by <a href="http://ghost.org">Ghost</a>',
+	'copyright_text': 'FinPub | Copyright 2019</a>',
 	'instagram': {
 		'access_token': '',
 		'user_id': 0
