--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,7 +1,7 @@
 <footer id="colophon">
 	<div class="top row">
 		<div class="col-md-3 column">
-			{{> widgets/widget-text}}
+			{{!-- {{> widgets/widget-text}} --}}
 		</div>
 		<div class="col-md-3 column">
 			{{> widgets/widget-links}}
@@ -10,14 +10,14 @@
 			{{> widgets/widget-tags}}
 		</div>
 		<div class="col-md-3 column">
-			{{> widgets/widget-newsletter}}
+			{{!-- {{> widgets/widget-newsletter}} --}}
 		</div>
 	</div>
 
 	<div class="bottom row">
 		<div class="bottom-top col-md-12"></div>
 		<div class="bottom-bottom col-md-12">
-			<ul class="social-links"></ul>
+			<ul class="social-links" style="display:none"></ul>
 		</div>
 	</div>
 </footer>
