--- a/partials/widgets/widget-links.hbs
+++ b/partials/widgets/widget-links.hbs
@@ -2,10 +2,9 @@
 	<h4 class="widget-title">Useful Links</h4>
 	<ul>
 		{{! Here are some examples below. You can add any link you want. }}
-		<li><a href="#">About</a></li>
-		<li><a href="#">Jobs</a></li>
-		<li><a href="#">Team</a></li>
-		<li><a href="#">Advertise</a></li>
-		<li><a href="#">Terms</a></li>
+		<li><a href="/ban-muon-viet-bai/">Bạn muốn viết bài?</a></li>
+		<li><a href="/dieu-khoan-su-dung/">Điều khoản sử dụng</a></li>
+		<li><a href="/huong-dan-thanh-toan/">Hướng dẫn thanh toán</a></li>
+		<li><a href="/lien-he/">Liên hệ</a></li>
 	</ul>
 </aside>
