--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -6,12 +6,16 @@
 			<span class="bar"></span>
 			<span class="bar"></span>
 		</div>
-		<ul class="social-links"></ul>
+		<ul class="social-links" style="display:none"></ul>
 		<nav id="main-navigation">
 			<ul class="nav-list clearfix">
 				{{#foreach navigation}}
           <li class="menu-item nav-{{slug}}{{#if current}} nav-current{{/if}}" role="presentation"><a href="{{url absolute="true"}}">{{label}}</a></li>
         {{/foreach}}
+			</ul>
+		</nav>
+		<nav id="authentication">
+			<ul class="nav-list clearfix">
 				<li class="menu-item">
 					<a id="loginBtn" href='' ></a>
 					<div id="user-info" class="user-info">
